added java 11 support